k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onthewing
  labels:
    app: onthewing
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: onthewing
  template:
    metadata:
      labels:
        app: onthewing
    spec:
      containers:
        - name: onthewing
          image: quay.io/iamleeg/onthewing:d7b10a9d3637b65a1a896b3b66ef27861b87ade9
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /WebObjects/OnTheWing.woa
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /WebObjects/OnTheWing.woa
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
