k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onthewing-svc
  labels:
    app: onthewing
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: onthewing
