k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onthewing-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/app-root: /WebObjects/OnTheWing.woa/0/
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "onthewing-route"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - journalonthewing.co.uk
        - www.journalonthewing.co.uk
      secretName: onthewing-tls
  rules:
    - host: journalonthewing.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onthewing-svc
                port:
                  number: 80
    - host: www.journalonthewing.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onthewing-svc
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onthewing-svc
                port:
                  number: 80
